@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="15"
-      android:versionName="15"
+      android:versionCode="16"
+      android:versionName="16"
       android:installLocation="preferExternal">
       
     <!-- android:targetSdkVersion 11 to hide the legacy menu button on tablets -->
